# latexcheck-py

./: README.md  latexcheck-2.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
helpers/: __init__.py
src/latexcheck/: __init__.py
src/latexcheck/helpers/: __init__.py
tests/: solution-265.tex  solution-442.tex  solution-66.tex
